mongoclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodbclient-deployment
  labels:
    app: mongodb-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-demo
      type: client
  template:
    metadata:
      labels:
        app: mongodb-demo
        type: client
    spec:
      containers:
      - name: mongoclient-container
        image: mongo-express
        ports:
        - containerPort: 8081
