mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb-demo
    type: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-demo
      type: db
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb-demo
        type: db
    spec:
      containers:
      - name: mongodb-container
        image: mongo
        ports:
        - containerPort: 27017
