mongoclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodbclient-service
  labels:
    app: mongodb-demo
    type: external
spec:
  type: NodePort
  selector:
    app: mongodb-demo
    type: client
  ports:
  - protocol: TCP
    nodePort: 30008
    port: 8081
    targetPort: 8081
