mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    app: mongodb-demo
    type: internal
spec:
  type: ClusterIP
  selector:
    app: mongodb-demo
    type: db
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
